More progress on user selection modal

--- a/app/templates/modals/select-user.html
+++ b/app/templates/modals/select-user.html
@@ -1,8 +1,8 @@
-<ion-modal-view>
-    <ion-header-bar class="bar-positive center">
-        <h2 class="title">{{selectedUser}}</h2>
-    </ion-header-bar>
-    <ion-content>
-        <h1>HALLO</h1>
-    </ion-content>
-</ion-modal-view>
+<div>
+    <h2 class="text-center">{{selectedUser.displayName}}</h2>
+    <div class="col">
+        <div class="row">
+            <button ng-click="callUser(selectedUser)" class="button button-positive" translate="SAR_CALL"></button>
+        </div>
+    </div>
+</div>
