--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -1,8 +1,8 @@
 <ion-view hide-nav-bar="true" hide-back-button="true">
     <ion-content scroll="false">
         <div class="content-wrapper" id="local-wrapper" ng-class="determineFullscreenCanvas()">
-            <video id="big-video"  ng-attr-autoplay="{{ determineIfBigVideoIsAutoplay() || undefined}}" muted="muted" ng-src="{{bigStreamSrc}}"></video>
-            <video id="small-video" ng-attr-autoplay="{{ determineIfSmallVideoIsAutoplay() || undefined}}" muted="muted" ng-src="{{smallStreamSrc}}"></video>
+            <video id="big-video"  autoplay="autoplay" muted="muted" ng-src="{{bigStreamSrc}}"></video>
+            <video id="small-video" autoplay="autoplay" muted="muted" ng-src="{{smallStreamSrc}}"></video>
             <audio id="call-audio" ng-src="{{::remoteAudioSrc}}" autoplay></audio>
             <div class="controls">
                 <i class="icon control-button arrow-button" ng-class="determineArrowSwitchClass()" ng-click="toggleArrowMode()"></i>
