Show last seen date if user is not currently online

--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -60,6 +60,11 @@
     display: inline;
 }
 
+.contact-seen {
+    float: right;
+    display: inline;
+}
+
 .preloader-on {
     .list {
         display: none;
