--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -29,7 +29,8 @@
                         <img src="{{contact.photo}}">
                         <h2>{{contact.displayName}}</h2>
                         <p class="contact-number"><i class="icon ion-ios-telephone contact-telephone"></i> {{contact.phoneNumber | intlpnFormat}}</p>
-                        <p class="contact-state"> {{'CONTACT_CURRENT_STATE' | translate}}  {{contact.currentState}}</p>
+                        <p class="contact-state" ng-hide="contact.currentState != 'online'"> {{'CONTACT_CURRENT_STATE' | translate}}  {{contact.currentState}}</p>
+                        <span class="contact-seen" ng-hide="contact.currentState == 'online'">Last seen: {{contact.lastSeen}}</span>
                     </a>
                 </div>
             </div>
