--- a/app/scss/contacts.scss
+++ b/app/scss/contacts.scss
@@ -51,16 +51,14 @@
   margin-left: 3px;
 }
 
-.contact-number {
-    display: inline;
-}
-
 .contact-state {
+    font-size: 14px;
     float: right;
     display: inline;
 }
 
 .contact-seen {
+    font-size: 14px;
     float: right;
     display: inline;
 }
@@ -86,14 +84,18 @@
     }
 
     .contact-wrapper {
-        img, p2, h2 {
+        h2 {
+            display: inline-block;
+        }
+
+        img, p2, h2, span {
             transition: opacity 0.5s, filter 0.5s;
             -webkit-transition: opacity 0.5s, filter 0.5s;
         }
     }
 
     .contact-wrapper.offline {
-        img, p, h2 {
+        img, p, h2, span {
             filter: grayscale(0.3) saturate(1);
             opacity: 0.5;
         }
