--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -3,9 +3,9 @@
         <ion-tab title="{{'CONTACTS' | translate}}" icon="ion-person-stalker" href="#/tab/contacts">
             <ion-nav-view name="contacts-tab"></ion-nav-view>
         </ion-tab>
-        <!--<ion-tab title="{{'CALL_LOG' | translate}}" icon="ion-ios-book" href="#">
-            <ion-nav-view name="contacts-tab"></ion-nav-view>
-        </ion-tab>-->
+        <ion-tab title="{{'CALL_LOG' | translate}}" icon="ion-ios-book" href="#/tab/calllog">
+            <ion-nav-view name="calllog-tab"></ion-nav-view>
+        </ion-tab>
          <ion-tab title="{{'SETTINGS' | translate}}" icon="ion-gear-a" href="#/tab/settings">
             <ion-nav-view name="settings-tab"></ion-nav-view>
         </ion-tab>
