--- a/app/templates/calllog.html
+++ b/app/templates/calllog.html
@@ -3,7 +3,7 @@
         <div class="list">
             <div ng-repeat="call in calls">
                 <a href="#" class="item">
-                    {{call.finalStatus}}
+                    {{call.text}}
                 </a>
             </div>
         </div>
