--- a/app/templates/calllog.html
+++ b/app/templates/calllog.html
@@ -1,17 +1,18 @@
 <ion-view view-title="{{'CALL_LOG' | translate}}" ng-cloak>
     <ion-content class="padding has-header">
-        <div class="list">
+        <div class="list call-log-list">
             <div ng-repeat="call in calls">
                 <a href="#" class="item">
-                    <h2>{{::call.text}}</h2>
+                    <h2>{{::call.userInfo}}</h2>
                     <span>{{::call.startedAt | amDateFormat: 'dddd, D.M.YYYY hh:mm:ss'}}</span>
+                    <p>{{::call.text}}</p>
                 </a>
             </div>
         </div>
 
         <div class="list" ng-hide="calls.length > 0">
             <a class="item no-results" href="#">
-                <h2>No calls made!</h2>
+                <h2>{{'NO_CALLS_MADE' | translate}}</h2>
             </a>
         </div>
     </ion-content>
