Start work on call log pagination

--- a/app/templates/calllog.html
+++ b/app/templates/calllog.html
@@ -13,6 +13,10 @@
             <a class="item no-results" href="#">
                 <h2>{{'NO_CALLS_MADE' | translate}}</h2>
             </a>
+            <ion-infinite-scroll
+                on-infinite="loadMoreCalls()"
+                distance="1%">
+            </ion-infinite-scroll>
         </div>
     </ion-content>
 </ion-view>
