--- a/app/templates/calllog.html
+++ b/app/templates/calllog.html
@@ -14,6 +14,7 @@
                 <h2>{{'NO_CALLS_MADE' | translate}}</h2>
             </a>
             <ion-infinite-scroll
+                ng-if="haveAllCallsBeenLoaded == false"
                 on-infinite="loadMoreCalls()"
                 distance="1%">
             </ion-infinite-scroll>
