--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -3,7 +3,7 @@
         <ion-tab title="{{'CONTACTS' | translate}}" icon="ion-person-stalker" href="#/tab/contacts">
             <ion-nav-view name="contacts-tab"></ion-nav-view>
         </ion-tab>
-        <ion-tab title="{{'CALL_LOG' | translate}}" icon="ion-ios-book" href="#/tab/calllog">
+        <ion-tab badge="notSeenCallsCount"  badge-style="badge-assertive" title="{{'CALL_LOG' | translate}}" icon="ion-ios-book" href="#/tab/calllog">
             <ion-nav-view name="calllog-tab"></ion-nav-view>
         </ion-tab>
          <ion-tab title="{{'SETTINGS' | translate}}" icon="ion-gear-a" href="#/tab/settings">
