--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,6 +1,10 @@
 $positive: #305e84 !default;
 @import "../vendor/ionic/scss/ionic";
 
+.tabs-striped.tabs-positive .tab-item .badge {
+    opacity: 1;
+}
+
 .action-sheet {
    .icon {
     position: initial;
