Disable pause button functionality in call if not your own

--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -7,7 +7,7 @@
             <div class="controls">
                 <i class="icon control-button arrow-button" ng-class="determineArrowSwitchClass()" ng-click="toggleArrowMode()"></i>
                 <i class="icon assertive control-button mute-button" ng-class="determineMuteButtonClass()" ng-click="toggleMute()"></i>
-                <i class="icon control-button pause-button" ng-class="determinePauseButtonClass()" ng-disabled="determineIfPauseButtonDisabled()" ng-click="togglePause()"></i>
+                <i class="icon control-button pause-button" ng-class="determinePauseButtonClass()" ng-disabled="determineIfPauseButtonDisabled()" ng-click="togglePause($event)"></i>
                 <i class="icon ion-trash-a control-button remove-button" ng-click="clearActiveCanvas()"></i>
                 <i class="icon ion-ios-telephone control-button leave-button" ng-click="leave()"></i>
             </div>
