--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -14,16 +14,27 @@
     width: 100vw;
 }
 
+.call-header {
+    position: absolute;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.3);
+    color: #fff;
+    text-align: center;
+    font-size: 1.3em;
+    z-index: 9000;
+}
+
 #big-video {
-   // background-color: yellow;
     height: 100%;
     width: 100%;
     z-index: -100;
 }
 
+
 #small-video {
     border: 3px solid black;
-    //background-color: green;
     max-height: 30vh;
     width: 20vw;
     position:absolute;
