--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -1,4 +1,3 @@
-
 .canvas-container {
   opacity: 0.7;
   position: absolute !important;
@@ -15,13 +14,22 @@
 }
 
 .call-header {
+    .call-time {
+        padding-right: 3vw;
+    }
+
+    .user-name {
+        padding-left: 3vw;
+    }
+
+    display: flex;
+    justify-content: space-between;
     position: absolute;
     padding-top: 10px;
     padding-bottom: 10px;
     width: 100vw;
     background: rgba(0, 0, 0, 0.3);
     color: #fff;
-    text-align: center;
     font-size: 1.3em;
     z-index: 9000;
 }
