Add screenshot actual button

--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -84,6 +84,11 @@
 
 
 
+    .camera-button {
+        font-size: 35px;
+        padding-top: 7px;
+    }
+
     .pause-button {
         font-size: 35px;
         padding-top: 6px;
