--- a/app/scss/call.scss
+++ b/app/scss/call.scss
@@ -13,6 +13,16 @@
     width: 100vw;
 }
 
+.screenshot {
+    .controls {
+        display: none !important;
+    }
+
+    #small-video {
+        display: none !important;
+    }
+}
+
 .call-header {
     .call-time {
         padding-right: 3vw;
