--- a/app/templates/call.html
+++ b/app/templates/call.html
@@ -6,9 +6,9 @@
                 <span class="call-time">{{callCurrentTime}}</span>
             </div>
             <video id="big-video"  ng-attr-autoplay="{{ determineIfBigVideoIsAutoplay() || undefined}}" muted="muted" ng-src="{{bigStreamSrc}}"></video>
-            <video id="small-video" ng-attr-autoplay="{{ determineIfSmallVideoIsAutoplay() || undefined}}" muted="muted" ng-src="{{smallStreamSrc}}"></video>
+            <video id="small-video" data-html2canvas-ignore="true" ng-attr-autoplay="{{ determineIfSmallVideoIsAutoplay() || undefined}}" muted="muted" ng-src="{{smallStreamSrc}}"></video>
             <audio id="call-audio" ng-src="{{::remoteAudioSrc}}" autoplay></audio>
-            <div class="controls">
+            <div class="controls" data-html2canvas-ignore="true">
                 <i class="icon control-button arrow-button" ng-class="determineArrowSwitchClass()" ng-click="toggleArrowMode()"></i>
                 <i class="icon ion-camera control-button camera-button" ng-click="takeScreenshot()"></i>
                 <i class="icon assertive control-button mute-button" ng-class="determineMuteButtonClass()" ng-click="toggleMute()"></i>
